# flower-recognition

./: README.md  convert_onnx.py  convert_pnnx.py  flower_resnet18_train.py  test.py  train.py
imageutils/: ImageDataset.py
inference/ncnn-deploy/: .gitignore  CMakeLists.txt  main.cpp  resnet18.h
inference/ncnn-deploy/model/: flower_resnet18.ncnn.param
model/: resnet18.py
